# tree-sitter-stata

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-stata-do-parser.pc.in
bindings/c/tree_sitter/: tree-sitter-stata-do-parser.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_stata_do_parser/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterStataDoParserTests/: TreeSitterStataDoParserTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: commands_simple.txt  comments_simple.txt  foreach_statement.txt  forvalues_statement.txt  if_expresssions.txt  if_statement.txt  modifier_block_statment.txt  while_statement.txt
